fix spacing

--- a/web/sass/voteDetail.scss
+++ b/web/sass/voteDetail.scss
@@ -101,6 +101,7 @@
  		}
  		dt{
  			margin-top: 25px;
+ 			margin-right: 1%;
  			font-size: 13px;
  			color: #404040;
  			font-weight: bold;
